--- a/docs/source/auto_examples/plot_pH_example.ipynb
+++ b/docs/source/auto_examples/plot_pH_example.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# pH prediction using the 88 soils dataset \n\nThe next microbiome example considers a\n`Soil dataset <https://github.com/Leo-Simpson/c-lasso/tree/master/examples/pH_data>`_ .\n\nThe task is to predict pH concentration in the soil from microbial abundance data.\n\nA similar analysis is also done in `Tree-Aggregated Predictive Modeling of Microbiome Data <https://www.biorxiv.org/content/10.1101/2020.09.01.277632v1>`_.\n `on another dataset <https://royalsocietypublishing.org/doi/full/10.1098/rspb.2014.1988>`_\n"
+        "\n# pH prediction using the 88 soils dataset \n\nThe next microbiome example considers a\n`Soil dataset <https://github.com/Leo-Simpson/c-lasso/tree/master/examples/pH_data>`_ .\n\nThe data are generated thanks to a `qiime2 workflow <https://github.com/Leo-Simpson/c-lasso/blob/master/examples/pH_data/qiime2/read%20data.ipynb>`_\nsimilar to `a gneiss tutorial <https://github.com/biocore/gneiss/blob/master/ipynb/88soils/88soils-qiime2-tutorial.ipynb>`_.\n\nThis workflow treat `some files <https://github.com/Leo-Simpson/c-lasso/blob/master/examples/pH_data/qiime2/originals>`_ \ntaken from `gneiss GitHub <https://github.com/biocore/gneiss/tree/master/ipynb/88soils>`_.\n\n\nThe task is to predict pH concentration in the soil from microbial abundance data.\n\nA similar analysis is also done in `Tree-Aggregated Predictive Modeling of Microbiome Data <https://www.biorxiv.org/content/10.1101/2020.09.01.277632v1>`_.\n `on another dataset <https://royalsocietypublishing.org/doi/full/10.1098/rspb.2014.1988>`_\n"
       ]
     },
     {
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "from classo import classo_problem\n\nimport qiime2\nimport pandas as pd\nimport numpy as np"
+        "from classo import classo_problem\nimport numpy as np\nimport pandas as pd"
       ]
     },
     {
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "table_art = qiime2.Artifact.load('pH_data/news/88soils_balances.qza')\ntable = table_art.view(pd.DataFrame)\nmetadata = pd.read_table('pH_data/originals/88soils_modified_metadata.txt', index_col=0)\nlabel = list(table.index)\n\n\nX = np.array(table)\ny_uncent = metadata[\"ph\"].values\ny = Y_uncent - np.mean(Y_uncent)  # Center Y\nprint(X.shape)\nprint(y.shape)"
+        "t = pd.read_csv('pH_data/qiime2/news/table.csv', index_col=0)\nmetadata = pd.read_table('originals/88soils_modified_metadata.txt', index_col=0)\ny_uncent = metadata[\"ph\"].values\n\n\nX = t.values\nlabel = t.columns\n\n\n\n\n# second option to load the data\n# import scipy.io as sio\n# pH = sio.loadmat(\"pH_data/matlab/pHData.mat\")\n# tax = sio.loadmat(\"pH_data/matlab/taxTablepHData.mat\")[\"None\"][0]\n# X, y_uncent = pH[\"X\"], pH[\"Y\"].T[0]\n# label = None\n\ny = y_uncent - np.mean(y_uncent)  # Center Y\nprint(X.shape)\nprint(y.shape)"
       ]
     },
     {
@@ -154,7 +154,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.9.1"
     }
   },
   "nbformat": 4,
