first benchmark and add examples

--- a/docs/source/auto_examples/plot_Tara_example.ipynb
+++ b/docs/source/auto_examples/plot_Tara_example.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Ocean salinity prediction based on marin microbiome data\n\nWe repoduce an example of prediction of ocean salinity over ocean microbiome data\nthat has been introduced in `this article <https://www.biorxiv.org/content/10.1101/2020.09.01.277632v1.full>`_,\nwhere the R package `trac <https://github.com/jacobbien/trac>`_ (which uses c-lasso)\nhas been used. \n\n\n\nBien, J., Yan, X., Simpson, L. and M\u00fcller, C. (2020).\nTree-Aggregated Predictive Modeling of Microbiome Data :\n\n\"Integrative marine data collection efforts such as Tara Oceans (Sunagawa et al., 2020)\nor the Simons CMAP (https://simonscmap.com)\nprovide the means to investigate ocean ecosystems on a global scale.\nUsing Tara\u2019s environmental and microbial survey of ocean surface water (Sunagawa, 2015),\nwe next illustrate how trac can be used to globally connect environmental covariates\nand the ocean microbiome. As an example, we learn a global predictive model of ocean salinity\nfrom n = 136 samples and p = 8916 miTAG OTUs (Logares et al., 2014).\ntrac identifies four taxonomic aggregations,\nthe kingdom bacteria and the phylum Bacteroidetes being negatively associated\nand the classes Alpha and Gammaproteobacteria being positively associated with marine salinity.\n"
+        "\n# Ocean salinity prediction based on marin microbiome data\n\nWe repoduce an example of prediction of ocean salinity over ocean microbiome data\nthat has been introduced in `this article <https://www.biorxiv.org/content/10.1101/2020.09.01.277632v1.full>`_,\nwhere the R package `trac <https://github.com/jacobbien/trac>`_ (which uses c-lasso)\nhas been used. \n\nThe data come originally from `trac <https://github.com/jacobbien/trac>`_,\nthen it is preprocessed in python in this `notebook <https://github.com/Leo-Simpson/c-lasso/examples/Tara/preprocess>`_.\n\n\n\nBien, J., Yan, X., Simpson, L. and M\u00fcller, C. (2020).\nTree-Aggregated Predictive Modeling of Microbiome Data :\n\n\"Integrative marine data collection efforts such as Tara Oceans (Sunagawa et al., 2020)\nor the Simons CMAP (https://simonscmap.com)\nprovide the means to investigate ocean ecosystems on a global scale.\nUsing Tara\u2019s environmental and microbial survey of ocean surface water (Sunagawa, 2015),\nwe next illustrate how trac can be used to globally connect environmental covariates\nand the ocean microbiome. As an example, we learn a global predictive model of ocean salinity\nfrom n = 136 samples and p = 8916 miTAG OTUs (Logares et al., 2014).\ntrac identifies four taxonomic aggregations,\nthe kingdom bacteria and the phylum Bacteroidetes being negatively associated\nand the classes Alpha and Gammaproteobacteria being positively associated with marine salinity.\n"
       ]
     },
     {
@@ -44,43 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "# import rpy in order to read data generated on R\nimport rpy2.robjects as ro\nfrom rpy2.robjects.packages import importr\n\n# this code code be used in order to import R library Matrix\nutils = importr('utils')    \nutils.chooseCRANmirror(ind=1) #\nutils.install_packages('Matrix')\nimportr('Matrix')\n\n#Open R file tara_sal_processed.RDS\nfile = 'Tara/tara_sal_processed.RDS'\nrds = ro.r['readRDS'](file)\n\nrA = ro.r[\"as.matrix\"](rds[4])\nx = np.array(rds[1])\ny = np.array(rds[0])\nA = np.array(rA)\n\nlabel_OTU = rds[1].colnames\nlabel_sample =rds[1].rownames\nlabel_nodes = np.array(list(rA.colnames))\nlabel_short = np.array([l.split(\"::\")[-1] for l in label_nodes])\nprint(y.shape)\nprint(x.shape)\nprint(A.shape)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Process similar to 2fit_trac_model.R\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "# first need to load \"tara_sal_trac.Rdata\"\n# in order to extract training set we are using\nro.r['load'](\"Tara/tara_sal_trac.RData\")\n\n\ncvfit = ro.r[\"cvfit\"]\ncv = cvfit.rx(\"cv\")\nlambda_1SE = cv.rx(\"lambda_1se\")\n\ntr = np.array(ro.r['tr']) - 1  # python index starts at 0 when R index starts at 1\nte = np.array([i for i in range(len(y)) if not i in tr])"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Process similar to trac\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "pseudo_count = 1\nX = np.log(pseudo_count+x)\nnleaves = np.sum(A,axis = 0)\nlogGeom = X.dot(A)/nleaves\n\nraise ValueError(\"Do not compute it now\")"
+        "data = np.load('Tara/tara.npz')\n\n\nlogGeom = data[\"logGeom\"]\nnleaves = data[\"nleaves\"]\ny = data[\"y\"]\nlabel_nodes = data[\"label_nodes\"]\nlabel_short = data[\"label_short\"]\ntr = data[\"tr\"]"
       ]
     },
     {
@@ -116,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "alpha = problem.solution.CV.refit\nyhat = logGeom[te].dot(alpha[1:])+alpha[0]\n\nM1, M2 = max(y[te]), min(y[te])\nplt.plot(yhat, y[te], 'bo', label = 'sample of the testing set')\nplt.plot([M1, M2], [M1, M2], 'k-', label = \"identity\")\nplt.xlabel('predictor yhat'), plt.ylabel('real y'), plt.legend()\nplt.show()"
+        "te = np.array([i for i in range(len(y)) if not i in tr])\nalpha = problem.solution.CV.refit\nyhat = logGeom[te].dot(alpha[1:])+alpha[0]\n\nM1, M2 = max(y[te]), min(y[te])\nplt.plot(yhat, y[te], 'bo', label = 'sample of the testing set')\nplt.plot([M1, M2], [M1, M2], 'k-', label = \"identity\")\nplt.xlabel('predictor yhat'), plt.ylabel('real y'), plt.legend()\nplt.show()"
       ]
     },
     {
@@ -152,7 +116,7 @@
       },
       "outputs": [],
       "source": [
-        "alpha = problem.solution.StabSel.refit\nyhat = logGeom[te].dot(alpha[1:])+alpha[0]\n\nM1, M2 = max(y[te]), min(y[te])\nplt.plot(yhat, y[te], 'bo', label = 'sample of the testing set')\nplt.plot([M1, M2],[M1, M2], 'k-', label = \"identity\")\nplt.xlabel('predictor yhat'), plt.ylabel('real y'), plt.legend()\nplt.show()"
+        "te = np.array([i for i in range(len(y)) if not i in tr])\nalpha = problem.solution.StabSel.refit\nyhat = logGeom[te].dot(alpha[1:])+alpha[0]\n\nM1, M2 = max(y[te]), min(y[te])\nplt.plot(yhat, y[te], 'bo', label = 'sample of the testing set')\nplt.plot([M1, M2],[M1, M2], 'k-', label = \"identity\")\nplt.xlabel('predictor yhat'), plt.ylabel('real y'), plt.legend()\nplt.show()"
       ]
     }
   ],
@@ -172,7 +136,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.9.1"
     }
   },
   "nbformat": 4,
