--- a/docs/source/auto_examples/plot_combo_example.ipynb
+++ b/docs/source/auto_examples/plot_combo_example.ipynb
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "from classo import csv_to_np, classo_problem, clr\nimport numpy as np"
+        "from classo import csv_to_np, classo_problem, clr\nimport numpy as np\nimport matplotlib.pyplot as plt"
       ]
     },
     {
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "problem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)"
+        "problem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)\nplt.tight_layout()"
       ]
     },
     {
@@ -170,7 +170,7 @@
       },
       "outputs": [],
       "source": [
-        "problem.formulation.huber = True\nproblem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)"
+        "problem.formulation.huber = True\nproblem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)\nplt.tight_layout()"
       ]
     }
   ],
