--- a/docs/source/auto_examples/plot_combo_example.ipynb
+++ b/docs/source/auto_examples/plot_combo_example.ipynb
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "problem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)\nplt.tight_layout()"
+        "problem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)"
       ]
     },
     {
@@ -170,7 +170,7 @@
       },
       "outputs": [],
       "source": [
-        "problem.formulation.huber = True\nproblem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)\nplt.tight_layout()"
+        "problem.formulation.huber = True\nproblem.formulation.concomitant = True\n\nproblem.solve()\nprint(problem)\nprint(problem.solution)"
       ]
     }
   ],
