--- a/examples/Synthetic data/Synthetic data Notebook.ipynb
+++ b/examples/Synthetic data/Synthetic data Notebook.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# import sys\n",
     "# !{sys.executable} -m pip install --upgrade c-lasso \n",
-    "from classo import random_data, classo_problem, to_zarr\n",
+    "from classo import random_data, classo_problem\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -492,103 +492,6 @@
    "source": [
     "print(problem.solution)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Zarr storage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-09T18:47:46.419905Z",
-     "start_time": "2020-12-09T18:47:45.995619Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'ipytree': Run `pip install zarr[jupyter]` or `conda install ipytree`to get the required ipytree dependency for displaying the tree widget. If using jupyterlab, you also need to run `jupyter labextension install ipytree`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m~/anaconda3/envs/envthesis/lib/python3.9/site-packages/zarr/util.py\u001b[0m in \u001b[0;36mtree_widget\u001b[0;34m(group, expand, level)\u001b[0m\n\u001b[1;32m    434\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m         \u001b[0;32mimport\u001b[0m \u001b[0mipytree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipytree'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m~/anaconda3/envs/envthesis/lib/python3.9/site-packages/IPython/core/formatters.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, obj)\u001b[0m\n\u001b[1;32m    916\u001b[0m             \u001b[0mmethod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_real_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_method\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    917\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 918\u001b[0;31m                 \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    919\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    920\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/envthesis/lib/python3.9/site-packages/zarr/util.py\u001b[0m in \u001b[0;36m_ipython_display_\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    504\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_ipython_display_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 505\u001b[0;31m         \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree_widget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpand\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    506\u001b[0m         \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ipython_display_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    507\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/envthesis/lib/python3.9/site-packages/zarr/util.py\u001b[0m in \u001b[0;36mtree_widget\u001b[0;34m(group, expand, level)\u001b[0m\n\u001b[1;32m    435\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mipytree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    436\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 437\u001b[0;31m         raise ImportError(\n\u001b[0m\u001b[1;32m    438\u001b[0m             \u001b[0;34m\"{}: Run `pip install zarr[jupyter]` or `conda install ipytree`\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;34m\"to get the required ipytree dependency for displaying the tree \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'ipytree': Run `pip install zarr[jupyter]` or `conda install ipytree`to get the required ipytree dependency for displaying the tree widget. If using jupyterlab, you also need to run `jupyter labextension install ipytree`"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "/\n",
-       " ├── data\n",
-       " │   ├── C (1, 200) float64\n",
-       " │   ├── X (100, 200) float64\n",
-       " │   ├── label (200,) <U3\n",
-       " │   └── y (100,) float64\n",
-       " ├── formulation\n",
-       " ├── model_selection\n",
-       " │   ├── CVparameters\n",
-       " │   │   ├── formulation\n",
-       " │   │   └── lambdas (80,) float64\n",
-       " │   ├── LAMfixedparameters\n",
-       " │   │   └── formulation\n",
-       " │   ├── PATHparameters\n",
-       " │   │   ├── formulation\n",
-       " │   │   └── lambdas (80,) float64\n",
-       " │   └── StabSelparameters\n",
-       " │       └── formulation\n",
-       " └── solution\n",
-       "     ├── CV\n",
-       "     │   ├── beta (200,) float64\n",
-       "     │   ├── formulation\n",
-       "     │   ├── label (200,) <U3\n",
-       "     │   ├── refit (200,) float64\n",
-       "     │   ├── selected_param (200,) bool\n",
-       "     │   ├── standard_error (80,) float64\n",
-       "     │   ├── xGraph (80,) float64\n",
-       "     │   └── yGraph (80,) float64\n",
-       "     ├── LAMfixed\n",
-       "     │   ├── beta (200,) float64\n",
-       "     │   ├── formulation\n",
-       "     │   ├── label (200,) <U3\n",
-       "     │   ├── refit (200,) float64\n",
-       "     │   └── selected_param (200,) bool\n",
-       "     ├── PATH\n",
-       "     │   ├── BETAS (80, 200) float64\n",
-       "     │   ├── LAMBDAS (80,) float64\n",
-       "     │   ├── formulation\n",
-       "     │   └── label (200,) <U3\n",
-       "     └── StabSel\n",
-       "         ├── distribution (200,) float64\n",
-       "         ├── label (200,) <U3\n",
-       "         ├── refit (200,) float64\n",
-       "         ├── selected_param (200,) bool\n",
-       "         └── to_label (200,) bool"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import zarr\n",
-    "root = zarr.group()\n",
-    "to_zarr(problem,'problem',root)\n",
-    "root.tree()"
-   ]
   }
  ],
  "metadata": {
@@ -607,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
