--- a/examples/example-notebook.ipynb
+++ b/examples/example-notebook.ipynb
@@ -9,7 +9,7 @@
      "start_time": "2020-12-14T14:32:42.007678Z"
     },
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
@@ -17,10 +17,32 @@
     "# import sys\n",
     "# !{sys.executable} -m pip install --upgrade c-lasso \n",
     "path_figure = '../../figures/'\n",
-    "from classo import clr, csv_to_np, classo_problem\n",
+    "from classo import clr, classo_problem\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import scipy.io as sio\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def csv_to_np(file, begin = 1, header = None):\n",
+    "    \"\"\"Function to read a csv file and to create an ndarray with this\n",
+    "\n",
+    "    Args:\n",
+    "        file (str): Name of csv file\n",
+    "        begin (int, optional): First colomn where it should read the matrix\n",
+    "        header (None or int, optional): Same parameter as in the function :func:`pandas.read_csv`\n",
+    "\n",
+    "    Returns:\n",
+    "        ndarray : matrix of the csv file\n",
+    "    \"\"\"\n",
+    "    tab1 = pd.read_csv(file, header = header)\n",
+    "    return np.array(tab1)[:, begin:]"
    ]
   },
   {
@@ -2627,7 +2649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
